# oop-cpp-bactery

./: CMakeLists.txt  Logger.cpp  Logger.h  README.md  Simulator.cpp  Simulator.h  main.cpp
model/: Bacillus.cpp  Bacillus.h  Bacterium.cpp  Bacterium.h  Cell.cpp  Cell.h  Coccus.cpp  Coccus.h  Spirillum.cpp  Spirillum.h
